--- a/index.html
+++ b/index.html
@@ -17,11 +17,54 @@
         <button type="submit" id='searchbutton'>🔎</button>
     </div>
     <div class=row>
-        <div class="col-sm-5">
-            <canvas id="chart1" width="400px" height="400px"></canvas>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart1" width="400px" height="400px"></canvas>
+            </div>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart2" width="400px" height="400px"></canvas>
+            </div>
         </div>
-        <div class="col-sm-5">
-            <canvas id="chart2" width="400px" height="400px"></canvas>
+        <div class=row>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart3" width="400px" height="400px"></canvas>
+            </div>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart4" width="400px" height="400px"></canvas>
+            </div>
+        </div>
+        <div class=row>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart5" width="400px" height="400px"></canvas>
+            </div>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart6" width="400px" height="400px"></canvas>
+            </div>
+        </div>
+        <div class=row>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart7" width="400px" height="400px"></canvas>
+            </div>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart8" width="400px" height="400px"></canvas>
+            </div>
+        </div>
+        <div class=row>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart9" width="400px" height="400px"></canvas>
+            </div>
+            <div class ="col-sm-1"></div>
+            <div class="col-sm-5">
+                <canvas id="chart10" width="400px" height="400px"></canvas>
+            </div>
         </div>
 
     <script
