--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-md-4 col-1"></div>
             <div class="col-md-2 col-5">
-                <button type='submit' id='searchbutton'>GO!</button>
+                <button type='submit' id='searchbutton' onclick="loadSearchResults()">GO!</button>
             </div>
             <div class="col-md-2 col-5">
                 <button type='submit' id='searchbutton'>Random</button>
@@ -38,13 +38,14 @@
         
         <div class="earth">
         </div>
+
         <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-        <script src='main.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-      </body>
+        <script src='main.js'></script>
+    </body>
 </html>
