--- a/index.html
+++ b/index.html
@@ -1,28 +1,51 @@
+
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Factbook App</title>
+    <title>The World Factbook</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+
   </head>
   <body>
-      <div id="head">
-
-      </div>
-      <div class="search">
-        <input type="text" placeholder="Search..." id="searchbar">
-        <button type="submit" id='searchbutton'>🔎</button>
-    </div>
-
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src='main.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  </body>
+        <header>
+            World Graphics
+        </header>
+        <div class="enterCountry">
+            <h3>Search any country or territory you'd like to learn about:</h3>
+        </div>
+        <div class="search row">
+            <div class="col-md-4 col-1"></div>
+            <div class="col-md-4 col-10">
+                <input type='text' id='searchbar' placeholder='Enter any Country...'>
+            </div>
+            <div class="col-md-4 col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-1"></div>
+            <div class="col-md-2 col-5">
+                <button type='submit' id='searchbutton'>GO!</button>
+            </div>
+            <div class="col-md-2 col-5">
+                <button type='submit' id='searchbutton'>Random</button>
+            </div>
+            <div class="col-md-5"></div>
+        </div>
+        
+        <div class="earth">
+        </div>
+        <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+        <script src='main.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+      </body>
 </html>
