adding random button that kinda works

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button type='submit' id='searchbutton'>GO!</button>
             </div>
             <div class="col-md-2 col-5">
-                <button type='submit' id='searchbutton'>Random</button>
+                <button type='submit' id='randombutton'>Random</button>
             </div>
             <div class="col-md-5"></div>
         </div>
