--- a/countryInfo.html
+++ b/countryInfo.html
@@ -161,7 +161,7 @@
     
                 <div class = "rows econ">
                     <div class= "half">
-                        <div class="section">
+                        <div class="section eco">
                             <p>Official Exchange Rate: </p>
                             <p class = "answer" id="exchangeRate"></p>
                         </div>
@@ -169,9 +169,9 @@
                     </div>
                         <div class = "midline"></div>
                     <div class = "half">
-                        <div class="section">
+                        <div class="section eco">
                             <p>Real Growth Rate: </p>
-                            <p class = "answer" id="growth rate"></p>
+                            <p class = "answer" id="growthRate"></p>
                         </div>
                         <canvas id="chart4" width="400px" height="400px"></canvas>
                     </div>
