--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>The World Factbook</title>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123729492-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-123729492-1');
+    </script>
+
+    <title>World Stat Book</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,10 +24,11 @@
   </head>
   <body>
         <header>
-            <h1>World FactBook</h1>
+            <h1>World Stat Book
+            </h1>
         </header>
         <div class="enterCountry">
-            <h3>Search any country or territory you'd like to learn about:</h3>
+            <h3>Search any country you'd like to learn about:</h3>
         </div>
         <div class="search row">
             <div class="col-md-4 col-1"></div>
@@ -39,6 +50,9 @@
         
         <div class="earth">
         </div>
+        <footer>
+            
+        </footer>
         <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
